<resources>
    <string name="app_name">HSPM</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No</string>
    <string name="already_a_member_login_here">Already a member? Login Here</string>
    <string name="sign_up">SIGN UP</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign Up</string>
    <string name="home">Home</string>
    <string name="current_service">Current Service</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="hardware">Hardware</string>
    <string name="software">Request Service</string>
    <string name="log_out">LOG OUT</string>
    <string name="what_s_the_problem">What\'s the Problem?</string>
    <string name="submit">Submit</string>
    <string name="problem_is">PROBLEM</string>
    <string name="no_current_service_add_any_service">No Current Service request any service …!</string>
    <string name="help">Help</string>
    <string name="opendrawer">Open Drawer</string>
    <string name="closedrawer">Close Drawer</string>
    <string name="cancel">Cancel Service</string>
    <string name="auto_detect">Auto detect</string>
    <string name="edit">Edit</string>
    <string name="update_request">Update Request</string>
    <string name="update">Update</string>
    <string name="finding_nearest_employ">Finding Nearest Employee...!</string>f
    <string name="select_a_service_address">Select a service address</string>
    <string name="next">Next</string>
    <string name="edit_address">Edit Address</string>
    <string name="what_do_you_need_help_with">What do you need help with?</string>
    <string name="not_working">Not working</string>
    <string name="os_installation">OS installation</string>
    <string name="monitor_display">Monitor/Display</string>
    <string name="motherboard">Motherboard</string>
    <string name="software_installation">Software installation</string>
    <string name="mouse">Mouse</string>
    <string name="chip_level_servicing">Chip level servicing</string>
    <string name="laptop">Laptop</string>
    <string name="desktop">Desktop</string>
    <string name="submit_request">Submit Request</string>
    <string name="specify_problem">Specify Problem</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="select_address">Select Address</string>
    <string name="location">LOCATION</string>
    <string name="enter_address">Enter Address</string>
    <string name="area">AREA</string>
    <string name="landmark">LANDMARK</string>
    <string name="house_flat_no">HOUSE/ FLAT NO.</string>
    <string name="service_is_accept_by">Service is Accept by:-</string>
    <string name="nam_e">Name :-</string>
    <string name="phoneno">PhoneNo :-</string>
    <string name="no_services_yet">No Services Yet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solved_issue">Solved Issue</string>
    <string name="amount">Amount</string>
    <string name="total">Total :</string>
    <string name="select_payment_option">Select Payment Option :</string>
    <string name="by_cash">By Cash</string>
    <string name="online">Online</string>
    <string name="payment_complete">Payment Complete</string>
    <string name="thank_you_msg">Thank you, your payment has been successful.</string>
    <string name="select_model">Please Select Model.</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_desc">Just getting started? Lets take a look at some of the great features of this app</string>
    `
    <string name="slide_2_title">Superfast Service</string>
    <string name="slide_2_desc">Always on time because faster is better</string>

    <string name="slide_3_title">Great Offers</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">Doorstep Services</string>
    <string name="slide_4_desc">Thats right! Skip the queue and get services at your place</string>
    <string name="other">Other</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="address">Address</string>
    <string name="save_and_next">Save and Next</string>
    <string name="mobile">Mobile</string>
    <string name="buttons_ports"><![CDATA[Buttons & Ports]]></string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="no_pending_services">No Pending Services.</string>
    <string name="building_name_house_name">BUILDING NAME/ HOUSE NAME</string>
</resources>
