<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Nav_Home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/Nav_History"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history" />
    </group>


    <item
        android:id="@+id/Nav_Tnc"
        android:icon="@drawable/ic_content_paste_black_24dp"
        android:title="@string/terms_and_conditions" />

    <item
        android:id="@+id/Nav_PrivacyPolicy"
        android:icon="@drawable/ic_lock_outline_black_24dp"
        android:title="@string/privacy_policy" />

    <item
        android:id="@+id/Nav_Help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/help" />

    <item
        android:id="@+id/Nav_Logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/log_out" />
</menu>