<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceForm2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <com.daimajia.numberprogressbar.NumberProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            app:progress_current="50"
            app:progress_max="100"
            app:progress_reached_bar_height="10dp"
            app:progress_reached_color="@color/colorPrimaryDark"
            app:progress_text_size="20dp"
            app:progress_unreached_bar_height="5dp" />

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/what_do_you_need_help_with"
            android:textColor="@color/primaryText"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/LinerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/CheckBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/not_working"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/CheckBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/os_installation"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/CheckBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/monitor_display"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/CheckBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/motherboard"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/CheckBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/software_installation"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/CheckBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/mouse"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/CheckBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/chip_level_servicing"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinerLayout"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="25sp"
            android:text="@string/specify_problem"
            android:textColor="@color/primaryText"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/EditText_Problem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView2"
            android:layout_margin="10dp"
            android:inputType="text" />

        <Button
            android:id="@+id/Button_Next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EditText_Problem"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </RelativeLayout>
</ScrollView>