<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/TextView_Update1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/update_request"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/Spinner_Services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_Update1"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/EditText_Dialog_Problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Spinner_Services"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Button_dialog_Update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText_Dialog_Problem"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/update"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/Button_dialog_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText_Dialog_Problem"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/cancel"
        android:textColor="@color/white" />
</RelativeLayout>